--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.9.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "@types/react": "~18.2.45",
     "expo": "~50.0.14",
+    "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
+    "metro-config": "^0.80.8",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-maps": "^1.14.0",
+    "react-native-svg": "^15.1.0",
+    "react-router-native": "^6.22.3",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "private": true
 }
