--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
+    "axios": "^0.19.2",
     "expo": "~50.0.14",
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
