--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-maps": "^1.14.0",
     "react-native-svg": "^15.1.0",
     "react-router-native": "^6.22.3",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-camera": "~14.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
