--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.9.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
     "axios": "^0.19.2",
     "expo": "~50.0.14",
+    "expo-camera": "~14.1.3",
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
     "metro-config": "^0.80.8",
@@ -25,8 +27,7 @@
     "react-native-maps": "^1.14.0",
     "react-native-svg": "^15.1.0",
     "react-router-native": "^6.22.3",
-    "typescript": "^5.3.0",
-    "expo-camera": "~14.1.3"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
