--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "metro-config": "^0.80.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.14.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "14.1.0",
     "react-router-native": "^6.22.3",
     "typescript": "^5.3.0"
   },
