--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.9.1",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
     "axios": "^0.19.2",
-    "expo": "~50.0.14",
+    "expo": "^51.0.8",
     "expo-camera": "~14.1.3",
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
