--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "axios": "^0.19.2",
     "expo": "^51.0.8",
-    "expo-camera": "~14.1.3",
-    "expo-router": "^3.4.8",
-    "expo-status-bar": "~1.11.1",
+    "expo-camera": "~15.0.9",
+    "expo-router": "~3.5.14",
+    "expo-status-bar": "~1.12.1",
     "metro-config": "^0.80.8",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.14.0",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "^15.2.0",
     "react-router-native": "^6.22.3",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
